--- a/client/src/components/Topbar/topbar.css
+++ b/client/src/components/Topbar/topbar.css
@@ -33,11 +33,10 @@
     border-radius: 30px;
     display: flex;
     align-items: center;
-
 }
 
 .searchIcon {
-    font-size: 20px !important;
+    font-size: 10px;
     margin-left: 10px;
 }
 
