--- a/client/src/components/Sidebar/sidebar.css
+++ b/client/src/components/Sidebar/sidebar.css
@@ -48,6 +48,12 @@
     margin: 20px 0;
 }
 
+.sidebarTitle{
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
 .sidebarFriendList {
     padding: 0;
     margin: 0;
