--- a/client/src/components/Rightbar/rightbar.css
+++ b/client/src/components/Rightbar/rightbar.css
@@ -29,7 +29,13 @@
     margin: 30px 0;
 }
 
+.rightbarHr {
+    margin: 20px 0;
+}
+
 .rightbarTitle{
+    font-size: 18px;
+    font-weight: 500;
     margin-bottom: 20px;
 }
 
@@ -37,12 +43,6 @@
     padding: 0;
     margin: 0;
     list-style: none;
-}
-
-.rightbarTitle{
-    font-size: 18px;
-    font-weight: 500;
-    margin-bottom: 10px;
 }
 
 .rightbarInfo{
