--- a/client/src/components/AdminSiderbar/adminSidebar.css
+++ b/client/src/components/AdminSiderbar/adminSidebar.css
@@ -1,7 +1,8 @@
 .adminSidebar {
     height: 100%;
-    width: 250px;
+    width: 100%;
     background-color: #f0e68c;
+    overflow-y: scroll;
     margin: 0;
     padding: 0;
 }
@@ -9,7 +10,7 @@
 .sidebarList{
     height: auto;
     width: 100%;
-    padding: 30px 0 0;
+    padding: 30px 0 0 0;
 }
 
 .sidebarList .row {
