--- a/client/src/components/AdminSiderbar/adminSidebar.css
+++ b/client/src/components/AdminSiderbar/adminSidebar.css
@@ -15,7 +15,7 @@
 
 .sidebarList .row {
     width: 100%;
-    height: 50px;
+    height: 70px;
     list-style-type: none;
     margin: 0;
     display: flex;
@@ -23,6 +23,7 @@
     color: white;
     align-items: center;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-size: 28px;
 }
 
 .row #icon {
