--- a/client/src/components/Topbar/topbar.css
+++ b/client/src/components/Topbar/topbar.css
@@ -29,10 +29,15 @@
 .searchbar {
     width: 100%;
     height: 30px;
-    background-color: white;
     border-radius: 30px;
-    display: flex;
+    display: block;
     align-items: center;
+    padding-left: 20px;
+}
+
+.userRow {
+    width: 570px;
+    background-color: white;
 }
 
 .searchIcon {
@@ -55,6 +60,10 @@
     align-items: center;
     justify-content: space-around;
     color: white;
+}
+
+.topbarLinks {
+    padding-right: 100px;
 }
 
 .topbarLink {
